--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^9.1.2",
     "@react-three/drei": "^4.3.2",
     "@react-three/fiber": "^6.0.16",
     "@react-three/postprocessing": "^2.0.3",
@@ -15,16 +16,20 @@
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.0.0",
     "d3-array": "^2.12.1",
+    "d3-color": "^2.0.0",
     "d3-format": "^3.0.0",
     "d3-scale": "^3.3.0",
     "d3-shape": "^2.1.0",
+    "leva": "^0.9.9",
     "postcss": "^8.2.13",
     "postprocessing": "^6.21.4",
     "prettier": "^2.2.1",
     "react": "^17.0.0",
     "react-colorful": "^5.1.4",
+    "react-dat-gui": "^4.1.1",
     "react-dom": "^17.0.0",
     "react-postprocessing": "^1.4.0",
+    "react-spring": "^9.1.2",
     "tailwindcss": "^2.1.2",
     "three": "^0.128.0"
   },
